# ciphernetood

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/datasets/: iscx_tor.yaml  iscx_vpn.yaml  mendeley.yaml  us_mobile_app.yaml  ustc_tfc2016.yaml  vnat.yaml
data/: README.md
experiments/: README.md  reproduce_ablation.sh  reproduce_closed_set.sh  reproduce_open_world.sh
notebooks/: README.md
scripts/: build_graphs.py  common.py  evaluate_closed_set.py  evaluate_open_world.py  fit_cpg_ood.py  predict_session.py  preprocess_pcaps.py  run_ablation.py  train_cfml.py
src/ciphernet_ood/: __init__.py  config.py
src/ciphernet_ood/data/: dataset.py  graph_builder.py  packet_features.py  pcap_tools.py  sessionize.py  splits.py
src/ciphernet_ood/evaluation/: closed_set.py  imbalance.py  metrics.py  open_world.py  perturbations.py
src/ciphernet_ood/losses/: cfml_loss.py  regularizers.py  traffic_margin.py
src/ciphernet_ood/models/: cfml_encoder.py  ciphernet.py  graph_transformer.py  prototypes.py
src/ciphernet_ood/ood/: gram.py  scorer.py  signatures.py  threshold.py
src/ciphernet_ood/training/: checkpointing.py  hooks.py  trainer.py
src/ciphernet_ood/utils/: device.py  io.py  logging.py  seed.py
tests/: test_gram_signature.py  test_graph_builder.py  test_margin_loss.py  test_metrics.py
